    - Boot-time filtering
    - Raw and promiscuous socket filtering
    - Apps no longer disconnect when firewall reloads
    - Connections window need not be open to register blocked applications
    - Multicast support for local network firewall rules
    - Support for machine-global exceptions
    - Increased protection against code-identity spoofing attacks
- Installer improvements
    - Install location can be customized
    - Warning about remote installations during setup
    - Slightly modernized installer look
    - Password protection of uninstaller if TinyWall is locked
- GUI improvements
    - New whitelisting option: drag&drop files into application list
    - Manual app detection gives instant first results
    - Live update of traffic rate in tray menu
    - Processes window remembers size
    - Much improved loading time of the Processes window
    - Don't list duplicate processes in Processes window
    - Improved batch whitelisting from Connections list
    - Improved batch whitelisting from Processes list
    - Support F5-refresh in Connections window
    - Support Delete key for application exceptions list
    - Eliminate flicker when updating Connections and Application lists
    - Enable single-click toggling of special exceptions
    - Sort Connections list by timestamp by default
- General reliability improvements
    - Atomically store configuration
    - Reduced probability of failed whitelisting attempts
    - Fix: Don't leave locked files on service exit
    - Fix: Race condition between update check and service message loop
    - Fix: Some code paths not reliably run at service exit
- Deprecation notes
    - Windows Vista no longer supported
    - 32-bit systems no longer supported

---------------------

2.1.11 - Maintenance release (28.07.2019.)
- Fix service hang on some systems when blocklists are enabled
- Fix service hang on some systems when opening Connections window

---------------------
